# QDarts

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENCE.md  Makefile  README.md  pyproject.toml  requirements.txt  response_v0.md  setup.py
Code/: noise_processes.py  polytope.py
Examples/: paper_figures_notebook.ipynb
docs/: api.html  api_tutorial.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulator.html
docs/_autosummary/: qdarts.experiment.html  qdarts.polytope.html  qdarts.simulator.html  qdarts.tunneling_simulator.html
docs/_sources/: index.rst.txt  simulator.rst.txt
docs/interfaces/: qdarts.capacitance_model.AbstractCapacitanceModel.html  qdarts.capacitance_model.CapacitanceModel.html  qdarts.experiment.Experiment.html  qdarts.noise_processes.AbstractNoiseProcess.html  qdarts.noise_processes.Cosine_Mean_Function.html  qdarts.noise_processes.OU_process.html  qdarts.polytope.Polytope.html  qdarts.simulator.AbstractCapacitiveDeviceSimulator.html  qdarts.simulator.AbstractPolytopeSimulator.html  qdarts.simulator.CapacitiveDeviceSimulator.html  qdarts.tunneling_simulator.AbstractSensorSim.html  qdarts.tunneling_simulator.ApproximateTunnelingSimulator.html  qdarts.tunneling_simulator.LocalSystem.html  qdarts.tunneling_simulator.NoisySensorDot.html  qdarts.tunneling_simulator.TunnelBarrierModel.html
examples/: api_tutorial.ipynb  csd_data.npy  examples_scipost.ipynb  figure_to_compare.ipynb  figures_scipost.ipynb  gui.py  insitu_reflectometry_beta.ipynb  latching_dev.ipynb  paper_figures_notebook.ipynb  relaxation_function.ipynb  test_insitu.ipynb
examples/.ipynb_checkpoints/: figures_scipost-checkpoint.ipynb
examples/2dots/: C_DD.npy  C_Dg_DQD.npy  csd_data.npy  figure_to_compare.ipynb  polytopes_data_DQD.npy  tunnel_couplings_DQD.npy  y_axis_DQD.npy
examples/6dots/: C_DD.npy  C_Dg.npy  figure_to_compare.ipynb  polytopes_data.npy  tunnel_couplings.npy  x_axis.npy
examples/notes/: relaxation.aux  relaxation.fdb_latexmk  relaxation.fls  relaxation.out  relaxation.tex
gh_pages/: .buildinfo  search.html
gh_pages/_autosummary/: qdarts.capacitance_model.html  qdarts.html  (+3 more)
ideas/: tasks.md
qatpack/: experiment.py  simulator.py
qdarts/: capacitance_model.py  equilibrium_sampler.py  experiment.py  model.py  noise_processes.py  plotting.py  polytope.py  simulator.py  tunneling_simulator.py  util_functions.py
qdats/: experiment.py
sphinx/: api_tutorial.rst  conf.py  index.rst
(+46 files in other folders)
