[project]
name = "QDATS"
version = "1.0.1"
authors = [
  { name="Jan Krzywda", email="" },
  { name="Evert van Nieuwenburg", email="" },
  { name="Oswin Krause", email="" },
]
description = "A package for simulating realistic quantum dot arrays and their charge transitions."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/condensedAI/QDATS"
Issues = "https://github.com/condensedAI/QDATS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"