[project]
name = "QDarts"
version = "1.0.3"
authors = [
  { name="Jan Krzywda", email="j.a.krzywda@liacs.leidenuniv.nl" },
  { name="Evert van Nieuwenburg", email="e.p.l.van.nieuwenburg@liacs.leidenuniv.nl" },
  { name="Oswin Krause", email="oswin.krause@di.ku.dk" },
]
description = "A package for simulating realistic quantum dot arrays and their charge transitions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'cvxpy == 1.5.2',
  'matplotlib >= 3.7.5',
  'numpy < 2.0',
  'scipy <=1.12.0,>= 1.6.0',
  "tqdm>=4.66.6",
]
[project.urls]
Homepage = "https://github.com/condensedAI/QDarts"
Issues = "https://github.com/condensedAI/QDarts"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
